fixing dropdown issu when dark mode is on

--- a/css/headerandfooter.css
+++ b/css/headerandfooter.css
@@ -80,6 +80,7 @@ body {
 .dropdown-content {
   font-size: 1.5em;
   border-bottom: 1px solid #ffc107;
+  top: 85px;
 }
 
 .dropdown-content2 {
